# Repairbot

./: .easignore  .gitignore  Mission.md  Research_SME_Resutls.md  Roadmap.md  Techstack.md  considerations.md
Repair_Logic_Agent/: .gitignore  README.md  agent_tests.ipynb  pyproject.toml  requirements.txt
Repair_Logic_Agent/agent_tools/text_convert/: __init__.py  mdconvert.py  text_web_browser.py  visual_qa.py
Repair_Logic_Agent/agent_tools/websearch/: README_search.md  __init__.py  requirements_search.txt  search_examples.py  setup_search.py  unified_search.py
Repair_Logic_Agent/agents/: agent_runner.py  hermes_service.py  hermes_worker.py  requirements_agents.txt  run_cli.py  spike_checks.py
Repair_Logic_Agent/app/: config.py  db.py  main.py
Repair_Logic_Agent/app/api/: media.py  sessions.py
Repair_Logic_Agent/app/models/: events.py
Repair_Logic_Agent/app/services/: agent_service.py  hermes_backend.py  learning_pipeline.py  observability.py  storage.py  traces.py
Repair_Logic_Agent/app/tools/: error_code_lookup.py  knowledge_layer.py  stt.py  vision_analysis.py  web_search.py
Repair_Logic_Agent/db/migrations/: 001_create_schema.sql  002_turn_idempotency.sql  (+1 more)
Repair_Logic_Agent/infra/: Dockerfile.agent  docker-compose.agent.yml  docker-compose.yml
Repair_Logic_Agent/knowledge_spike/: .gitignore  corpus_loader.py  evaluate_spikes.py  key_rotator.py  requirements_spike.txt  spike_a_structured.py  spike_b_llm_wiki.py  spike_c_hybrid.py  validate_golden.py
Repair_Logic_Agent/tests/: conftest.py  test_media.py  test_schema.py  test_sessions.py
(+99 files in other folders)
